Fix height issues and prevent y overflow for content and storyteller cards

--- a/mapstory/static/style/site/search.less
+++ b/mapstory/static/style/site/search.less
@@ -174,6 +174,7 @@
     padding: 16px;
     overflow: auto;
     font-size: 0.8em;
+    height: 150px;
     .profile-info {
         float: left;
         width: 70%;
@@ -223,13 +224,15 @@
     border-radius: 6px;
     margin: 0 16px 20px 0;
     width: 240px;
-    height: 365px;
+    height: 375px;
     box-sizing: border-box;
     padding: 16px;
     overflow: auto;
     font-size: 0.8em;
     img {
         border: 1px solid @gray-500;
+        width: 205px;
+        height: 150px;
     }
     .content-title {
         overflow-wrap: break-word;
@@ -276,6 +279,7 @@
 
 .thumbnail-and-content-type {
     position: relative;
+    width: 200px;
 }
 
 .content-result-type {
